--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <section>
 
         <article>
-          Nanami Hotta
+          main の中に 3つのブロックがあるパターン（3カラム）
         </article>
 
         <article>
-          Social Design
+          Nanami Hotta
         </article>
 
       </section>
